コード修正

--- a/html/p1.html
+++ b/html/p1.html
@@ -16,7 +16,7 @@
 
 <!--■■■header BEGIN■■■-->
 	<div id="my_header">
-		<p><button id="title" class="title" onclick="location.href='.'">SiteName</button>　　<span class="ym">イベントの設定</span></p>
+		<p><button id="title" class="title" onclick="location.href='.'">SiteName</button>　　<span class="ym">イベント作成</span></p>
 	</div><!--/my_header-->
 <!--■■■header END  ■■■-->
 
