--- a/html/p2.html
+++ b/html/p2.html
@@ -30,6 +30,9 @@
 		</table><!--/table table-condensed-->
 
 		<br>
+		<?php include_once('html/chat_user.html'); ?>
+
+		<br>
 		<p><button id="togglebtn_b" class="togglebtn0">＋</button><span id="togglespn_b" class="middle"> ： 使い方</span></p>
 		<div id="manual" class="manual">
 			<h3>１秒でわかる基本操作</h3>
